# plutarch-csa

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  README.md  flake.nix  plutarch-csa.cabal
app/: Main.hs
offchain/: .gitignore
src/: Sample.hs  Utils.hs
